# open-helix

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.txt  LICENSE  METHODS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: nbml-validate.yml
docs/: FOR_PRODUCT_TEAMS.md  NBML_v0.2.md  index.html
nvx/: NVE-0001.md  NVE-0002.md  NVE-0003.md  NVE-0004.md  NVE-0005.md  NVE-0006.md  NVE-0007.md  NVE-0008.md  NVE-0009.md  NVE-0010.md
omu/: alice.nbml.yaml  dracula.nbml.yaml  sherlock.nbml.yaml
tooling/: helix_val.py
